test: add/refresh coverage for parser, llm repair, instrumentation, and purity flows